{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 88,
  "lineage": "db714118-693f-37f3-51f9-ea3a8921d9b5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_lab02-sptech",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986368801701:internet-gateway/igw-01033d87fe28e5a1f",
            "id": "igw-01033d87fe28e5a1f",
            "owner_id": "986368801701",
            "tags": {
              "Name": "igw_lab02-sptech"
            },
            "tags_all": {
              "Name": "igw_lab02-sptech"
            },
            "vpc_id": "vpc-056038dc209ccc13b"
          },
          "dependencies": [
            "aws_vpc.vpc-lab01-sptech"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "router_routetointernet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/10",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01033d87fe28e5a1f",
            "id": "r-rtb-03d0c8ec8120a10103822696239",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03d0c8ec8120a1010",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_lab02-sptech",
            "aws_route_table.rtb-lab02-sptech",
            "aws_vpc.vpc-lab01-sptech"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb-lab02-sptech",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986368801701:route-table/rtb-03d0c8ec8120a1010",
            "id": "rtb-03d0c8ec8120a1010",
            "owner_id": "986368801701",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": null,
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": null,
                "destination_prefix_list_id": null,
                "egress_only_gateway_id": null,
                "gateway_id": "igw-01033d87fe28e5a1f",
                "instance_id": null,
                "ipv6_cidr_block": null,
                "local_gateway_id": null,
                "nat_gateway_id": null,
                "network_interface_id": null,
                "transit_gateway_id": null,
                "vpc_endpoint_id": null,
                "vpc_peering_connection_id": null
              }
            ],
            "tags": {
              "Name": "rtb-lab02-sptech"
            },
            "tags_all": {
              "Name": "rtb-lab02-sptech"
            },
            "timeouts": null,
            "vpc_id": "vpc-056038dc209ccc13b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_lab02-sptech",
            "aws_vpc.vpc-lab01-sptech"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "router_pub_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a71e35fc2a5ebe00",
            "route_table_id": "rtb-03d0c8ec8120a1010",
            "subnet_id": "subnet-0c9a89fed573723e2"
          },
          "dependencies": [
            "aws_internet_gateway.igw_lab02-sptech",
            "aws_route_table.rtb-lab02-sptech",
            "aws_subnet.sub-az1-pub-lab01-sptech",
            "aws_vpc.vpc-lab01-sptech"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub-az1-priv-lab01-sptech",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986368801701:subnet/subnet-047277abc6cfdb284",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-047277abc6cfdb284",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "986368801701",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sub-az1-priv-lab01-sptech"
            },
            "tags_all": {
              "Name": "sub-az1-priv-lab01-sptech"
            },
            "vpc_id": "vpc-056038dc209ccc13b"
          },
          "dependencies": [
            "aws_vpc.vpc-lab01-sptech"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub-az1-pub-lab01-sptech",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986368801701:subnet/subnet-0c9a89fed573723e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c9a89fed573723e2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "986368801701",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sub-az1-pub-lab01-sptech"
            },
            "tags_all": {
              "Name": "sub-az1-pub-lab01-sptech"
            },
            "vpc_id": "vpc-056038dc209ccc13b"
          },
          "dependencies": [
            "aws_vpc.vpc-lab01-sptech"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-lab01-sptech",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986368801701:vpc/vpc-056038dc209ccc13b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b4093033da77a8c3",
            "default_route_table_id": "rtb-08ce875e9f2aa1983",
            "default_security_group_id": "sg-06a1947bad4bd9d3f",
            "dhcp_options_id": "dopt-0560c18ef21e2b8fd",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-056038dc209ccc13b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08ce875e9f2aa1983",
            "owner_id": "986368801701",
            "tags": {
              "Name": "vpc-lab01-sptech"
            },
            "tags_all": {
              "Name": "vpc-lab01-sptech"
            }
          }
        }
      ]
    }
  ]
}